--- a/src/styles/components/Profile.css
+++ b/src/styles/components/Profile.css
@@ -1,7 +1,14 @@
 .profile {
   border: .1rem solid black;
   display: flex;
-  height: 3rem;
+  height: 6rem;
+  background-color: white;
+}
+
+.profile .name {
+  width: 5rem;
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 
 .profile--selected {
@@ -13,14 +20,19 @@
 }
 
 .profile-picture img {
-  height: 3rem;
+  height: 6rem;
+  max-width: 4.5rem;
+  min-width: 4.5rem;
 }
 
 .profile-info {
-  flex-grow: 2;
+  flex-grow: 7;
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .profile-info p {
   margin: 0 1rem;
+  font-size: 1.2rem;
 }
