Minor css update

--- a/src/styles/components/Home.css
+++ b/src/styles/components/Home.css
@@ -18,4 +18,14 @@
 .home button {
   grid-column-start: 3;
   align-self: center;
+  margin: 0 1rem 1rem;
+}
+
+.home .error-alert {
+  grid-column-start: 2;
+  align-self: center;
+}
+
+.compare-button {
+  height: 3.3rem;
 }
