--- a/src/styles/components/ErrorAlert.css
+++ b/src/styles/components/ErrorAlert.css
@@ -1,7 +1,7 @@
 .error-alert {
   margin: 0 1rem 1rem;
   text-align: left;
-  font-size: .7rem;
+  font-size: 1rem;
   border: .1rem solid coral;
   background-color: lightpink;
   border-radius: .2rem;
